# ani-server

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/middlewares/: cors.rs  mod.rs
src/routes/: anime.rs  episodes.rs  lists.rs  mod.rs  recommendations.rs  relations.rs  search.rs  top.rs  updates.rs  user.rs
