[package]
name = "ani-server"
version = "0.1.0"
edition = "2021"

[dependencies]
ani-core = { path = "../ani-core" }
# actix = "0.13.5"
actix-cors = "0.7.0"
actix-web = "4.0"
log = "0.4.25"
serde = "*"
serde_json = "1.0.138"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls"] }
thiserror = "1.0"
anyhow = "1.0.95"
env_logger = "*"
actix-files = "0.6.6"

# stardict = "0.2.1"
# actix-multipart = "0.7.2"
